--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/Detail.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/Detail.cshtml
@@ -336,22 +336,7 @@ using (Html.BeginForm("AppliedJob", "Job", FormMethod.Post))
             </div>
       
         <div class="col-md-3" style="width:30%">
-            <div class="panel panel-default">
-                <br />
-                <h4 style="margin-left: 10px;font-weight: 600;">Bạn có thể</h4>
-                <ul class="list-group">
-                    <li class="list-group-item"><i class="fa fa-star"></i><a href="#" style="color: #428bca;">Lưu việc làm này</a></li>
-                    <li class="list-group-item"><i class="fa fa-envelope"></i><a href="#" style="color: #428bca;">Gửi email việc làm tương tự</a></li>
-                    <li class="list-group-item"><i class="fa fa-mail-forward"></i><a href="#" style="color: #428bca;">Giới thiệu bạn bè</a></li>
-                    <li class="list-group-item"><button type="button" data-target="#modal-report" data-toggle="modal" class="btn btn-green">Report</button></li>
-                    <li class="list-group-item">
-                        <i class="glyphicon glyphicon-bullhorn" style="margin-right: 2px;"></i>Chia sẻ
-                        <a title="Share on Facebook" href="#"><i class="fa fa-lg fa-facebook-square"></i></a>
-                        <a title="Share on LinkedIn" href="#"><i class="fa fa-lg fa-linkedin-square"></i></a>
-                        <a title="Share on Twitter" href="#"><i class="fa fa-lg fa-twitter-square"></i></a>
-                    </li>
-                </ul>
-            </div>
+           
             <div class="panel panel-default">
                 <br />
                 <h4 style="margin-left: 10px;font-weight: 600;">Tổng quan công việc</h4>
@@ -378,6 +363,18 @@ using (Html.BeginForm("AppliedJob", "Job", FormMethod.Post))
                         <h5 style="font-weight: 600">Ngôn Ngữ Trình Bày Hồ Sơ</h5>
                         Tiếng Anh
                     </div>*@
+                </div>
+            </div>
+            <div class="panel panel-default">
+                <br />
+                <h4 style="margin-left: 10px;font-weight: 600;">Công việc tương tự</h4>
+                <div style="margin-left: 10px;">
+                    @foreach (var item in @Model.jobList)
+                    {
+                        <a href="/Job/Detail/?jobID=@item.JobID">@item.JobTitle</a>
+                        <br />
+                    }
+                    <br />
                 </div>
             </div>
         </div>
