--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Profile/List.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Profile/List.cshtml
@@ -7,6 +7,27 @@
 
 <script>
     $(document).ready(function () {
+
+        $.extend($.fn.dataTable.defaults, {
+            searching: true
+        });
+        var table = $('#myTable').DataTable({
+            lengthChange: false,
+            "language": {
+                "lengthMenu": "Hiển thị _MENU_ yêu cầu mỗi trang",
+                "zeroRecords": "Không tìm thấy dữ liệu phù hợp",
+                "info": "Hiển thị trang _PAGE_ trên tổng số _PAGES_ trang",
+                "infoEmpty": "Không tìm thấy dữ liệu phù hợp",
+                "infoFiltered": "(tìm kiếm từ _MAX_ yêu cầu)",
+                "oPaginate": {
+                    "sNext": "Trang sau",
+                    "sPrevious": "Trang trước"
+                }
+            }
+
+        });
+
+
         $('.deletebutton').click(function (id) {
             $('#deleteprofileID').val($(this).data('id'));
         });
@@ -46,28 +67,28 @@
     </div>
 </div>
 
-<div class="page-content" style="padding: 20px 0px 20px 250px">
+<div class="page-content" style="padding: 20px 100px 20px 100px; background-color: #dedede">
     <div class="col-lg-9 panel panel-default">
         <h3 style="font-weight:600;text-align:center">Quản lý hồ sơ</h3>
         <br />
-        <a href="@Url.Action("Update")" class="btn btn-grey btn-sm">
-            <i class="fa fa-plus"></i>&nbsp;
+        <a href="@Url.Action("Update", new { mode = "create" })" class="btn btn-grey btn-sm">
+            <i class="fa fa-pencil"></i>&nbsp;
             Tạo hồ sơ
         </a>
         <br />
         <br />
         <div class="table-container">
 
-            <table class="table table-hover table-striped table-bordered table-advanced tablesorter">
+            <table id="myTable" class="table table-hover table-striped table-bordered table-advanced tablesorter">
                 <thead>
                     <tr>
-                        <th width="7%">No</th>
-                        <th width="7%">Tiêu đề </th>
-                        <th width="10%">Cho phép tìm kiếm</th>
+                        <th width="3%">Stt</th>
+                        <th width="18%">Tiêu đề </th>
+                        <th width="13%">Cho phép tìm kiếm</th>
                         <th width="10%">Lần xem</th>
-                        <th width="15%">Ngày cập nhật</th>
+                        <th width="20%">Ngày cập nhật</th>
                         <th width="7%">Trạng thái</th>
-                        <th width="30%">Hành động</th>
+                        <th width="15%">Hành động</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -105,7 +126,7 @@
                                 }
 
                                 <td>
-                                    <a href="@Url.Action("Update", new { profileID = item.ProfileID })" class="open-ModalDisapproveConfirm btn btn-blue" style="display:inline">
+                                    <a href="@Url.Action("Update", new { profileID = item.ProfileID })" class="open-ModalDisapproveConfirm btn btn-blue btn-sm" style="display:inline">
                                         &nbsp;<i class="fa fa-edit" data-toggle="tooltip" title="Xem và Cập nhật"></i>
                                     </a>
                                     &nbsp;
@@ -115,44 +136,14 @@
                                         <button type="button" data-id="DeleteForm@(item.ProfileID)" data-message="Bạn thật sự muốn xóa?" class="btn btn-red btn-sm confirmButton"><i class="fa fa-trash-o"></i>&nbsp;</button>
                                     }
                                     @*<button type="button" data-target="#ModalDeleteConfirm" data-id="@item.ProfileID" data-toggle="modal" class="open-ModalDisapproveConfirm btn btn-danger" style="display:inline">
-                                        &nbsp;<i class="fa fa-trash-o" data-toggle="tooltip" title="Xóa"></i>
-                                    </button>*@
+                                    &nbsp;<i class="fa fa-trash-o" data-toggle="tooltip" title="Xóa"></i>
+                                </button>*@
                                 </td>
                             </tr>
                         }
                     }
                 </tbody>
             </table>
-            <!--<div class="row">
-                <div class="col-lg-6">
-                    <div class="pagination-panel">
-                        Page
-                        &nbsp;<a href="#" class="btn btn-sm btn-default btn-prev"><i class="fa fa-angle-left"></i></a>&nbsp;<input type="text" maxlenght="5" value="1" class="pagination-panel-input form-control input-mini input-inline input-sm text-center">&nbsp;<a href="#" class="btn btn-sm btn-default btn-prev"><i class="fa fa-angle-right"></i></a>&nbsp;
-                        of 6 | View
-                        &nbsp;<select class="form-control input-xsmall input-sm input-inline">
-                            <option value="20" selected="selected">20</option>
-                            <option value="50">50</option>
-                            <option value="100">100</option>
-                            <option value="150">150</option>
-                            <option value="-1">All</option>
-                        </select>&nbsp;
-                        records | Found total 58 records
-                    </div>
-                </div>
-                <div class="col-lg-6 text-right">
-                    <div class="pagination-panel">
-                        <ul class="pagination pagination-sm man">
-                            <li><a href="#">«</a></li>
-                            <li><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">4</a></li>
-                            <li><a href="#">5</a></li>
-                            <li><a href="#">»</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>-->
         </div>
 
     </div>
