Sua loi chinh ta Index.cshtml

--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Home/Index.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Home/Index.cshtml
@@ -70,10 +70,10 @@
         })
 
         $("#jobCategories").multiselect({
-            header: "Bạn chỉ có thể chọn tối đa 3 nghành nghề",
+            header: "Bạn chỉ có thể chọn tối đa 3 ngành nghề",
 
             selectedList: 3,
-            noneSelectedText: "Nghành nghề"
+            noneSelectedText: "Ngành nghề"
         });
         $('#jobCategories').change(function () {
 
