--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/CommonList/SchoolLevelList.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/CommonList/SchoolLevelList.cshtml
@@ -107,7 +107,7 @@
     <div class="col-lg-9 panel panel-default">
         <h3 style="font-weight:600;text-align:center">Danh sách bằng cấp</h3>
         <button id="CreateBtn" type="button" class="btn btn-grey btn-sm">
-            <i class="fa fa-plus"></i>&nbsp;
+            <i class="fa fa-pencil"></i>&nbsp;
             Tạo mới
         </button>&nbsp;
         <br />
