--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/Create.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/Create.cshtml
@@ -51,10 +51,10 @@
         })
 
         $("#categoriesList").multiselect({
-            header: "Bạn chỉ có thể chọn tối đa 3 nghành nghề",
+            header: "Bạn chỉ có thể chọn tối đa 3 ngành nghề",
 
             selectedList: 3,
-            noneSelectedText: "Nghành nghề"
+            noneSelectedText: "Ngành nghề"
         });
         $('#categoriesList').change(function () {
 
