--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Shared/_LayoutFinal.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Shared/_LayoutFinal.cshtml
@@ -342,7 +342,7 @@
                         -->
                         <div class="form-group">
                             <label>Username</label>
-                            <div class="input-icon right"><i class="fa fa-user"></i><input type="text" data-val="true" data-val-required="Ô Username trống." placeholder="Username" name="UserName" class="form-control" value=""></div>
+                            <div class="input-icon right"><i class="fa fa-user"></i><input type="text" data-val="true" data-val-required="Ô Username trống." data-val-length="Ô Username không được quá 20 kí tự." data-val-length-max="20" placeholder="Username" name="UserName" class="form-control" value=""></div>
                             <span class="field-validation-valid ErrorMessage" data-valmsg-for="UserName" data-valmsg-replace="true"></span>
                         </div>
                         <div class="form-group">
